# pr-reviewer-distillation

./: .gitignore  README.md  REVIEW_RUBRIC.md  pyproject.toml
eval/baselines/: gpt-4o-mini.jsonl  gpt-4o.jsonl  pr-reviewer-7b-instruct.jsonl  pr-reviewer-7b.jsonl
eval/golden/: golden.jsonl
eval/results/: judge_scores_basev1.jsonl  judge_scores_v2.jsonl  summary_basev1.json  summary_v2.json
scripts/: check_github.py  fetch_diff.py  generate_model_reviews.py  generate_traces.py  hello_finetune.py  judge_eval.py  judge_eval_claude.py  list_prs.py  make_splits.py  merge_and_push.py  run_baselines.py  scrape_prs.py  serve_vllm.py  test_live.py  train.py  upload_training_data.py
src/distill/: filters.py  github_client.py  openai_client.py  prompts.py
